# matrix-calculator

./: CMakeLists.txt
eigenpairs-finder/: eigenpairs-finder-test.cpp  eigenpairs-finder.h  eigenpairs-finder.tpp
matrix/: complex_matrix.txt  matrix-test.cpp  matrix.h  matrix.tpp  matrix.txt  matrix2.txt  matrix3.txt  vector.txt
matrix/matrix-expression/: matrix-expression.h  matrix-expression.tpp
surface-operations/: operations-test.cpp  operations.h  operations.tpp
